# builder

./: .gitattributes  .gitignore  CLAUDE.md  MODS.md  Mekanism.cfg  README.md  builder.nix  cowpackbestpack.json  default.nix  flake.nix  launcher-lock.json  pull.sh  push.sh  update-and-start.sh
.github/workflows/: update-manifest.yml
base-e15/scripts/: Erisia.zs
base-server/: start.sh
cursetool-rb/: default.nix
lib/: lib.nix  make-serverpack.py  serverpack.xsl
manifest/: Mettle.json  TPPI2.nix  all_of_fabric_5.nix  all_of_fabric_5.yml  e21.yaml  e22.5.nix  e22.5.yaml  e22.nix  e22.yaml  e24.nix  e26.nix  e26.yaml  e28.nix  e28.yml  e31.nix  e32.json  e32.yaml  e33.json  e33.yaml  e33.yml  e33_5.json  e33_5.yaml  e34.json  e34.yaml  e34_5-mods.yaml  e34_5.json  e34_5.yaml  e35.json  e35.yaml  electrical_assault.nix  electrical_assault.yaml  enigmatica6.yml  erisia.nix  foundry.yaml  meatballcraft.json  meteoric_descent.nix  meteoric_descent.yaml  mettle.nix  mettle.yaml  omnifactory.yaml  (+6 more)
manifests/: BR-Extras.json  BR-Extras.nix  Cosmetic.nix  ModularMayhem.nix
mcupdater-nixos/: README.md  flake.nix
nixpkgs/: default.nix
tests/: default.nix
tools/: recompress_audio.py
tools/control/: Cargo.toml  default.nix
tools/control/src/: main.rs
tools/ftb-unpacker/: Cargo.toml  flake.nix  rust-toolchain.toml
tools/ftb-unpacker/src/: main.rs
tools/nbt-scanner/: Cargo.toml
tools/nbt-scanner/src/: main.rs
tools/nbt-scanner/testdata/: json.json
web/: README.md  default.nix  hugo.yaml  modernization-plan.md
web-hugo/: README.md  hugo.yaml  serve.sh
(+4025 files in other folders)
