[package]
name = "ftb-unpacker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
color-eyre = "0.6.3"
indicatif = "0.17.11"
reqwest = { version = "0.12.12", features = ["http2", "charset", "gzip", "brotli", "zstd", "blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sha256 = "1.6.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
