[package]
name = "nbt-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hematite-nbt = "0.5"
clap = { version = "4.0", features = ["derive"] }
regex = "1.5"
walkdir = "2.3"
flate2 = "1.0"
anyhow = "1.0"
rayon = "1.7"
